# volumecontrol

./: .release-plz.toml  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  macos.yml  quality.yml  release-napi.yml  release-plz-pr.yml  release-plz-release.yml  release-plz.yml  windows.yml
volumecontrol/: CHANGELOG.md  Cargo.toml
volumecontrol-core/: CHANGELOG.md  Cargo.toml  README.md
volumecontrol-core/src/: lib.rs  traits.rs
volumecontrol-linux/: CHANGELOG.md  Cargo.toml  README.md
volumecontrol-linux/src/: lib.rs  pulse.rs
volumecontrol-macos/: CHANGELOG.md  Cargo.toml  README.md
volumecontrol-macos/src/: lib.rs
volumecontrol-napi/: CHANGELOG.md  Cargo.toml  README.md  package.json
volumecontrol-napi/src/: lib.rs
volumecontrol-windows/: CHANGELOG.md  Cargo.toml  README.md
volumecontrol-windows/src/: internal.rs  lib.rs
volumecontrol/src/: lib.rs
