[workspace]
members = [
    "volumecontrol-core",
    "volumecontrol-linux",
    "volumecontrol-windows",
    "volumecontrol-macos",
    "volumecontrol",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SomaticIT/volumecontrol"

[workspace.dependencies]
volumecontrol-core = { path = "volumecontrol-core" }
thiserror = "2.0"

# ── cross cross-compilation configuration ────────────────────────────────────
#
# These sections tell `cross` to install the PulseAudio and ALSA development
# libraries for each GNU cross target before building.  `libasound2-dev` is a
# transitive build requirement of `libpulse-dev` on Debian/Ubuntu.
#
# musl targets are not listed because PulseAudio's shared library is
# glibc-linked and cannot be dynamically linked into musl binaries; those
# targets are checked without the `pulseaudio` feature.
#
# See https://github.com/cross-rs/cross/blob/main/docs/custom_images.md

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libpulse-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
]

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libpulse-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
]
