[package]
name = "volumecontrol-napi"
description = "Node.js bindings for volumecontrol via napi-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
volumecontrol = { path = "../volumecontrol" }
volumecontrol-core = { workspace = true }
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

# ── cross cross-compilation configuration ────────────────────────────────────
#
# The napi CLI invokes `cross` in a way that does not inherit
# `[workspace.metadata.cross]` from the root Cargo.toml.  We therefore
# duplicate the two relevant GNU target entries here as
# `[package.metadata.cross.target.*]` so that cross reads them regardless of
# how it is invoked.
#
# pre-build: install the PulseAudio / ALSA dev libraries for the target arch
#            inside the cross container and create a pkg-config wrapper so that
#            `libpulse-sys`'s build script can locate `libpulse.pc`.
# env.set:   pass RUSTFLAGS into the container so that the linker finds
#            `libpulse.so.0` in the multi-arch library directory.

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libpulse-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
    "echo '#!/bin/sh' > /usr/local/bin/aarch64-unknown-linux-gnu-pkg-config",
    "echo 'PKG_CONFIG_LIBDIR=/usr/lib/aarch64-linux-gnu/pkgconfig PKG_CONFIG_ALLOW_CROSS=1 exec pkg-config \"$@\"' >> /usr/local/bin/aarch64-unknown-linux-gnu-pkg-config",
    "chmod +x /usr/local/bin/aarch64-unknown-linux-gnu-pkg-config",
]

[package.metadata.cross.target.aarch64-unknown-linux-gnu.env]
set = { RUSTFLAGS = "-L /usr/lib/aarch64-linux-gnu" }

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libpulse-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
    "echo '#!/bin/sh' > /usr/local/bin/armv7-unknown-linux-gnueabihf-pkg-config",
    "echo 'PKG_CONFIG_LIBDIR=/usr/lib/arm-linux-gnueabihf/pkgconfig PKG_CONFIG_ALLOW_CROSS=1 exec pkg-config \"$@\"' >> /usr/local/bin/armv7-unknown-linux-gnueabihf-pkg-config",
    "chmod +x /usr/local/bin/armv7-unknown-linux-gnueabihf-pkg-config",
]

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf.env]
set = { RUSTFLAGS = "-L /usr/lib/arm-linux-gnueabihf" }
